--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "escodegen": "0.0.22",
     "esprima": "~1.0.3",
     "js-yaml": "~2.1.0",
-    "async": "~0.2.9"
+    "async": "~0.2.9",
+    "walk": "~2.2.1",
+    "underscore": "~1.4.4"
   }
 }
