--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "js-yaml": "~2.1.0",
     "async": "~0.2.9",
     "walk": "~2.2.1",
-    "underscore": "~1.4.4"
+    "underscore": "~1.4.4",
+    "npm": "~1.2.30"
   }
 }
