Added travis secure vars encryption.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "async": "~0.2.9",
     "walk": "~2.2.1",
     "underscore": "~1.4.4",
-    "npm": "~1.2.30"
+    "npm": "~1.2.30",
+    "process": "~0.5.1",
+    "travis-encrypt": "~0.1.4"
   }
 }
